tests/ui/mut/mutable-class-fields-2.stderr
error[E0594]: cannot assign to `self.how_hungry`, which is behind a `&` reference
  --> $DIR/mutable-class-fields-2.rs:9:5
   |
LL |     self.how_hungry -= 5;
   |     ^^^^^^^^^^^^^^^^^^^^ `self` is a `&` reference, so the data it refers to cannot be written
   |
help: consider changing this to be a mutable reference
   |
LL |   pub fn eat(&mut self) {
   |               +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
